# P1-Healthcare-System

./: .gitignore  CMakeLists.txt  README.md  brandon
src/: CMakeLists.txt  Makefile  cmake_install.cmake  csv_functions.c  functions.c  functions.h  main.c  patient_register.csv  referrals.csv  referrals_send.csv  referrals_send_doc.csv  timetable.csv
src/brandon/: brandon  brandon.c
src/database/: forwarded_referrals  gp_patient_register.csv  gp_ref_doc.csv  gp_users.csv  hosp_ref_inbox.csv  hosp_ref_inbox_doc.csv  patient_register.csv  ref_forwarded.csv  ref_returned.csv  referrals.csv  referrals_send.csv  referrals_send_doc.csv  returned_referrals  timetable.csv
src/functions/: functions.h  gp_functions.c  hosp_functions.c  main_workflow_functions.c  user_cred_functions.c  utility_functions.c
test/: CMakeLists.txt  GP_usernames.csv  main.c  test_main.c
test/database/: patient_register.csv
test/inputs/: create_patient.txt  search_patient.txt
test/mock_data/: hospital_usernames.csv  patient_register.csv  referrals.csv
